# BarcodeGenerator

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/silgrid/barcodegenerator/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: code128.json  code128.txt  logValues.json  qrAlignmentPatternLocation.json  qrAlphanumeric.json  qrVersionCapacities.json
app/src/main/cpp/: BarcodeGenerator.cpp  BarcodeGenerator.h  barcodegenerator-lib.cpp  native-lib.cpp
app/src/main/cpp/android/: AndroidBarcodeGenerator.cpp  AndroidBarcodeGenerator.h  AndroidQRCodeGenerator.cpp  AndroidQRCodeGenerator.h  AssetLoader.cpp  AssetLoader.h
app/src/main/cpp/code128/: CharacterRow.cpp  CharacterRow.h  CharacterSet.cpp  CharacterSet.h
app/src/main/cpp/common/: BarcodeGenerator.cpp  BarcodeGenerator.h  DataFiles.h  QRCodeGenerator.cpp  QRCodeGenerator.h  ResourceLoader.cpp  ResourceLoader.h
app/src/main/cpp/common/code128/: CharacterRow.cpp  CharacterRow.h  CharacterSet.cpp  CharacterSet.h
app/src/main/cpp/common/qr/: ErrorCorrector.cpp  ErrorCorrector.h  Version.cpp  Version.h  VersionFactory.cpp  VersionFactory.h  VersionInfo.h
app/src/main/cpp/common/qr/encoders/: AlphanumericEncoder.cpp  AlphanumericEncoder.h  ByteEncoder.cpp  ByteEncoder.h  Encoder.cpp  Encoder.h  EncoderFactory.cpp  EncoderFactory.h  NumericEncoder.cpp  NumericEncoder.h
app/src/main/cpp/common/qr/errorCorrection/: ErrorCorrector.cpp  ErrorCorrector.h  LogAntilogTable.cpp  LogAntilogTable.h  Polynomial.cpp  Polynomial.h
app/src/main/cpp/common/qr/masking/: MaskersFactory.cpp  MaskersFactory.h  MatrixMasker.cpp  MatrixMasker.h
app/src/main/cpp/common/qr/util/: MatrixUtil.cpp  MatrixUtil.h
app/src/main/java/com/silgrid/barcodegenerator/: MainActivity.java
app/src/main/java/com/silgrid/barcodegenerator/generator/: BarcodeGenerator.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/silgrid/barcodegenerator/: ExampleUnitTest.java
